src/snapshots/antithesis_browser__instrumentation__tests__instrument_source_code_if.snap
---
source: src/instrumentation.rs
expression: code
---
window.antithesis_branch_coverage = window.antithesis_branch_coverage || new Uint8Array(64 * 1024);
window.antithesis_location_previous = window.antithesis_location_previous || 0;
let x;
function example(a, b) {
	if (a == true) {
		antithesis_branch_coverage[(0xbb2a3fb2cd2c7000 ^ antithesis_location_previous) % antithesis_branch_coverage.length] += 1;
		antithesis_location_previous = 0xbb2a3fb2cd2c7000 >> 1;
		x = b;
	} else {
		antithesis_branch_coverage[(0xc6017c948e276800 ^ antithesis_location_previous) % antithesis_branch_coverage.length] += 1;
		antithesis_location_previous = 0xc6017c948e276800 >> 1;
	}
}
console.log(example(true, 1));
